--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.42
+1.42 May 21, 2005
 	- Fix minor issues with copying and bytea quoting on older 
 		servers. Fix some other memory leaks. [GSM]
 	- Fix backslash parsing in statements (CPAN bug #12870)
@@ -23,7 +23,7 @@
 	- Change VARCHAROID to UNKNOWNOID, suggested by users on mailing 
 		list [GSM]
 
-1.41
+1.41 April 6, 2005
 	- Make sure tests remove all temporary tables.
 		[Frank Bax] [GSM]
 	- Preserve sqlstate if rolling back on deallocate, fix 
