--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.43 
+	- Fix get_info(18) ("ODBCVERSION") (CPAN bug #12968)
+		[thanks to szinger@lanl.gov] [GSM]
 
 1.42 May 21, 2005
 	- Fix minor issues with copying and bytea quoting on older 
