--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.43 
-	- Ensure state() returns an empty string, not 00000 on sucess.
-		[michael.bell@web.de of OpenCA] [GSM]
+	- Ensure state() returns an empty string, not 00000 on success.
+		(CPAN bug #13237) [michael.bell@web.de of OpenCA] [GSM]
 	- Fix rare core dump when $sth still in scope after disconnect [GSM]
 	- Enhancements to README.win32 [fenlisesi@gmail.com]
 	- Fix incorect sprintf calls (CPAN bug #12204)
