--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Fix strncpy bug in quote.c [Jun Kuriyama]
 	- Fix error in is_high_bit_set(). [Alexey Tourbin]
 
 1.43 June 23, 2005
