Mention quote() enhancements

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Add support for sepcifying type in $dbh->quote(), 
+		such as $dbh->quote($var, {pg_type => DBD::Pg::PG_BYTEA}).
+		Also support type => SQL_xx [GSM]
 	- Fix pg_notifies() bug (CPAN bug #14232) [door@lcpi.ru] 
 	- Add pg_ping() method [GSM]
 	- Make sure ping returns true, even if in failed transaction state.
