Put CPAN bug# with new quoting enhancements.

--- a/Changes
+++ b/Changes
@@ -5,7 +5,7 @@
 		method if it returns 0 (CPAN bug #14302)
 	- Add support for specifying type in $dbh->quote(), 
 		such as $dbh->quote($var, {pg_type => DBD::Pg::PG_BYTEA}).
-		Also support type => SQL_xx [GSM]
+		Also support type => SQL_xx [GSM] (fixed CPAN bug #13942)
 	- Fix pg_notifies() bug (CPAN bug #14232) [door@lcpi.ru] 
 	- Add pg_ping() method [GSM]
 	- Make sure ping returns true, even if in failed transaction state.
