--- a/Changes
+++ b/Changes
@@ -12,7 +12,7 @@
 		[thanks to Bill Moseley] [GSM]
 	- Fix COPY-related core dump [GSM]
 	- Fix strncpy bug in quote.c [Jun Kuriyama]
-	- Fix error in is_high_bit_set(). [Alexey Tourbin]
+	- Fix error in is_high_bit_set(). [Alexey Tourbin] (CPAN bug #13406)
 
 1.43 June 23, 2005
 	- Added README.dev file. [GSM]
