Mention recent do() changes, credit Tom Lane

--- a/Changes
+++ b/Changes
@@ -1,11 +1,14 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Rewrite and optimize the do() method. Should be much faster 
+		when called without placeholders. Thanks to Tom Lane 
+		for suggesting this. [GSM]
 	- Double check PQserverVersion return and use alternate 
 		method if it returns 0 (CPAN bug #14302)
 	- Add support for specifying type in $dbh->quote(), 
 		such as $dbh->quote($var, {pg_type => DBD::Pg::PG_BYTEA}).
-		Also support type => SQL_xx [GSM] (fixed CPAN bug #13942)
+		Also support type => SQL_xx [GSM] (fixes CPAN bug #13942)
 	- Fix pg_notifies() bug (CPAN bug #14232) [door@lcpi.ru] 
 	- Add pg_ping() method [GSM]
 	- Make sure ping returns true, even if in failed transaction state.
