--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Overhaul get_info data, add many more values [GSM]
 	- Overhaul type_info data (fixes CPAN bug #13806) [GSM]
 	- Explicitly prevent any parsing of statements for placeholders 
 		unless they begin with "SELECT", "INSERT", "UPDATE", or "DELETE"
