--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Fix parser to handle leading parens. (CPAN bug #15481) [GSM]
 	- Make statement handles destruction abort early if 
 		InactiveDestroy is set (CPAN bug #14978) [GSM]
 	- Make quote work properly for time/date types
