--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.44
+1.44 February 21, 2006
 	- Make sure pg_warn does not warn if the database attribute
 		PrintWarn is off. (Tyler MacDonald tyler@yi.org) [GSM]
 	- Add SIGNATURE file for Module::Signature verification. [GSM]
