--- a/README
+++ b/README
@@ -1,15 +1,4 @@
 
-===================================================
-WARNING!!
-
-THIS IS A TEST VERSION (1.43_2) AND SHOULD BE USED 
-FOR TESTING PURPOSED ONLY. PLEASE USE A STABLE 
-VERSION (no underscore) BY VISITING:
-
-http://search.cpan.org/~dbdpg/
-===================================================
-
-
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
 # $Id$
@@ -17,7 +6,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 1.43_2 of DBD-Pg.  The web site for this interface is at:
+This is version 1.44 of DBD-Pg.  The web site for this interface is at:
 
 	http://gborg.postgresql.org/project/dbdpg/projdisplay.php
 
@@ -86,6 +75,10 @@ and running since DBD::Pg uses it for its installation.
 
 INSTALLATION:
 -------------
+
+Before installing, please use the "cpansign -v" program to cryptographically 
+verify that your copy of DBD::Pg is complete and valid. The program 
+"cpansign" is part of Module::Signature, available from CPAN.
 
 By default Makefile.PL uses App::Info to find the location of the
 PostgreSQL library and include directories.  However, if you want to
