--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+===================================================
+WARNING!!
+
+THIS IS A TEST VERSION (1.44_1) AND SHOULD BE USED 
+FOR TESTING PURPOSED ONLY. PLEASE USE A STABLE 
+VERSION (no underscore) BY VISITING:
+
+http://search.cpan.org/~dbdpg/
+===================================================
 
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
@@ -6,7 +15,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 1.44 of DBD-Pg.  The web site for this interface is at:
+This is version 1.44_1 of DBD-Pg.  The web site for this interface is at:
 
 	http://gborg.postgresql.org/project/dbdpg/projdisplay.php
 
