--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.45
-
+	- Fix bug preventing bytea values over 20 characters from showing.
+		Spotted by Igor Shevchenko. [GSM]
 
 1.44 February 21, 2006
 	- Make sure pg_warn does not warn if the database attribute
