--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+1.46
+	- Fix problem with dollar-sign placeholders.
+		(CPAN bug 18209) [GSM]
+
 1.45 February 27, 2006
 	- Fix bug preventing bytea values over 20 characters from showing.
 		Spotted by Igor Shevchenko. [GSM]
