--- a/Changes
+++ b/Changes
@@ -1,8 +1,13 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.46
+1.46 March 20, 2006
+	- Fix problem with selecting arrays. (CPAN bugs #18128 and 
+		#18177) [GSM]
+	- Fix problem with dollar-sign placeholders. [GSM]
+
+1.46 March 16, 2006
 	- Fix problem with dollar-sign placeholders. (husseinp@gmail.com)
-		(CPAN bug 18209) [GSM]
+		(CPAN bug #18209) [GSM]
 
 1.45 February 27, 2006
 	- Fix bug preventing bytea values over 20 characters from showing.
