--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.46 March 20, 2006
+1.48
+		- Add documentation about connection service files
+			(pg_service.conf). [David Fetter]
+
+1.47 March 20, 2006
 	- Fix problem with selecting arrays. (CPAN bugs #18128 and 
 		#18177) [GSM]
 	- Fix problem with dollar-sign placeholders. [GSM]
