--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.48
+	- Bump minimum DBI version to 1.41 (CPAN bug #18260) [GSM]
 	- Fix bytea encoding problem (CPAN bug #18264) [GSM]
 	- Add documentation about connection service files
 		(pg_service.conf). [David Fetter]
