Mention latest fix.

--- a/Changes
+++ b/Changes
@@ -1,10 +1,11 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.48
+1.48 April 3, 2006
+	- Force PQexecParams to only run with DML. (CPAN bug #18258) [GSM]
 	- Bump minimum DBI version to 1.41 (CPAN bug #18260) [GSM]
 	- Fix bytea encoding problem (CPAN bug #18264) [GSM]
-	- Add documentation about connection service files
-		(pg_service.conf). [David Fetter]
+	- Add documentation about connection service files (pg_service.conf). 
+		[David Fetter]
 
 1.47 March 20, 2006
 	- Fix problem with selecting arrays. (CPAN bugs #18128 and 
