--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.48 April 3, 2006
+1.48 April 5, 2006
+	- Ensure begin_work is properly set before err. (CPAN bug #18387) [GSM]
 	- Force PQexecParams to only run with DML. (CPAN bug #18258) [GSM]
 	- Bump minimum DBI version to 1.41 (CPAN bug #18260) [GSM]
 	- Fix bytea encoding problem (CPAN bug #18264) [GSM]
