--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.49
+	- Fix incorrect quoting preventing compiling (CPAN bug #18640)
 	- Add support for quoting and binding of geometric types: POINT, 
-		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. [GSM]
+		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. Also added the 
+        TID type. [GSM]
 
 1.48 April 5, 2006
 	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
