--- a/Changes
+++ b/Changes
@@ -6,15 +6,15 @@
 		in the line number. (CPAN bug #18900) [GSM]
 	- Make workaround for PQresultErrorField not returning proper 
 		result when an error is set and we are connecting via TCP/IP.
-		This allows correct $dbh->state() values., [GSM]
-	- Fix incorrect quoting preventing compiling (CPAN bug #18640)
+		This allows correct $dbh->state() values. [GSM]
+	- Fix incorrect quoting preventing compiling. (CPAN bug #18640)
 	- Add support for quoting and binding of geometric types: POINT, 
 		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. Also added the 
 		TID type. [GSM]
 
 1.48 April 5, 2006
 	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
-		in versions 1.42 and 1.44 [GSM]
+		in versions 1.42 and 1.44) [GSM]
 	- Fix typo in Pg.pm code (CPAN bug #18537) [marc@sssonline.com]
 	- Ensure begin_work is properly set before err. (CPAN bug #18387) [GSM]
 	- Force PQexecParams to only run with DML. (CPAN bug #18258) [GSM]
