--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-1.49
+1.50
+
+1.49 May 7, 2006
 	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
 	- Add the statement handle attribute ParamTypes, and fix an error 
 		in ParamValues. ParamTypes requires DBI 1.49 or better. [GSM]
