--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.50
+	- Switch from cvs to subversion. Switch from gborg to perl.org.
 
 1.49 May 7, 2006
 	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
