--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 
 1.50
 	- Switch from cvs to subversion. Switch from gborg to perl.org.
+	- Fix pg_description join in table_info(). [max@endpoint.com]
 
 1.49 May 7, 2006
 	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
