--- a/Changes
+++ b/Changes
@@ -3,8 +3,8 @@
 1.50
 	- Switch from cvs to subversion. Switch from gborg to perl.org.
 	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
-	- Fix memory leak in pg_notifies. [Stephen Marshall smarshall@wsi.com]
-		(CPAN bug #21380)
+	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
+		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
 
 1.49 May 7, 2006
 	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
