--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
 	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
 		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
+	- Added statistics_info function [Brandon Black blblack@gmail.com]
 
 1.49 May 7, 2006
 	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
