--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.50
+    - Change $dbh->{Name} to return the entire DSN string, minus the 
+      'dbi:Pg:' part. Thanks to MArk Stosberg for the idea. [GSM]
 	- Add $dbh->{pg_placeholder_dollaronly} to allow '?' and other symbols 
 	  to be used in prepared statements without getting interpreted as 
 	  placeholders, i.e. the geometric operator '?#' (CPAN bug #24124) [GSM]
